--- a/src/Pages/Payments/payment.module.css
+++ b/src/Pages/Payments/payment.module.css
@@ -48,3 +48,9 @@ font-size: 20px;
  .paymentDetails button:hover{
     background-color: var(--primary-shade);
  }
+ @media screen and (max-width:760px){
+    .flex{
+        flex-direction: column;
+        align-items: center;
+    }
+ }
